force-app/main/default/objects/AsyncJob__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The field represents the action type.</description>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>