force-app/main/default/objects/AsyncJob__e/fields/AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncJobId__c</fullName>
    <description>Represents the Batchable or Queueable job Id</description>
    <label>Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>