force-app/main/default/objects/AsyncJob__e/fields/JobRequestId__c.field-meta.xml
<CustomField>
    <fullName>JobRequestId__c</fullName>
    <description>Represents the Async Job Request record Id.</description>
    <label>Job Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>