force-app/main/default/objects/AsyncJob__e/fields/JobRequestTypeId__c.field-meta.xml
<CustomField>
    <fullName>JobRequestTypeId__c</fullName>
    <description>Represents the Record Type Id of Async Job Request record.</description>
    <label>Job Request Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>